# ForceControlCollection

./: .gitignore  CMakeLists.txt  README.md  _config.yml  package.xml  robots.txt
.github/workflows/: ci-catkin.yaml  ci-standalone.yaml  ci.yaml  package.yaml
cmake/: Config.cmake.in
debian/: changelog  control  copyright
doc/: CMakeLists.txt
doxygen/: Constants_8h.html  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h_source.html  Contact_8h.html  Contact_8h__dep__incl.map  Contact_8h__dep__incl.md5  Contact_8h__incl.map  Contact_8h__incl.md5  Contact_8h_source.html  Contact_8hpp.html  Contact_8hpp__dep__incl.map  Contact_8hpp__dep__incl.md5  Contact_8hpp_source.html  README_8md.html  WrenchDistribution_8h.html  WrenchDistribution_8h__incl.map  WrenchDistribution_8h__incl.md5  WrenchDistribution_8h_source.html  WrenchDistribution_8hpp.html  WrenchDistribution_8hpp__dep__incl.map  WrenchDistribution_8hpp__dep__incl.md5  WrenchDistribution_8hpp_source.html  annotated.html  classForceColl_1_1Contact-members.html  classForceColl_1_1Contact.html  classForceColl_1_1Contact__inherit__graph.map  classForceColl_1_1Contact__inherit__graph.md5  classForceColl_1_1EmptyContact-members.html  classForceColl_1_1EmptyContact.html  classForceColl_1_1EmptyContact__coll__graph.map  classForceColl_1_1EmptyContact__coll__graph.md5  classForceColl_1_1FrictionPyramid-members.html  classForceColl_1_1FrictionPyramid.html  classForceColl_1_1GraspContact-members.html  classForceColl_1_1GraspContact.html  classForceColl_1_1GraspContact__coll__graph.map  classForceColl_1_1GraspContact__coll__graph.md5  classForceColl_1_1SurfaceContact-members.html  classForceColl_1_1SurfaceContact.html  (+61 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+12 more)
include/ForceColl/: Constants.h  Contact.h  Contact.hpp  WrenchDistribution.h  WrenchDistribution.hpp
include/ForceControlCollection/: Contact.h  WrenchDistribution.h  WrenchDistribution.hpp
include/WrenchDistribution/: WrenchDistribution.h  WrenchDistribution.hpp
src/: CMakeLists.txt  Contact.cpp  WrenchDistribution.cpp
tests/: CMakeLists.txt
tests/src/: TestContact.cpp  TestWrenchDistribution.cpp
