<package format="2">
  <name>wrench_distribution</name>
  <version>0.1.0</version>
  <description>
    Wrench distribution for robot control
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/wrench_distribution</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qp_solver_collection</depend>

  <build_depend>eigen</build_depend>

  <doc_depend>doxygen</doc_depend>
</package>
