<package format="2">
  <name>force_control_collection</name>
  <version>0.2.0</version>
  <description>
    Force control functions for robot control
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/force_control_collection</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qp_solver_collection</depend>

  <build_depend>eigen</build_depend>

  <doc_depend>doxygen</doc_depend>
</package>
